--- a/index.html
+++ b/index.html
@@ -64,6 +64,35 @@
                 </div>
             </div>
         </section>
+        <!-- what i do section -->
+        <section class="What-i-do">
+            <h3 class="section-title">
+                what I do
+            </h3>
+            <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem20 -->
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="" alt="">
+                    <p class="skill-title"></p>
+                    <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur nulla nostrum dolores laboriosam. Quasi, nesciunt. Libero illum impedit eum doloribus?</p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <p class="skill-title"></p>
+                    <p class="skill-description">Voluptatibus quia nesciunt tempora autem sit. Ipsa odit nihil quia maiores dignissimos illo deleniti expedita aspernatur omnis velit? Repellendus, tempora!</p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <p class="skill-title"></p>
+                    <p class="skill-description">Debitis corporis non beatae, corrupti soluta facere impedit tenetur. Dicta ducimus unde officiis consequuntur voluptate similique dolorum asperiores perferendis autem!</p>
+                </div>
+                <div class="skill">
+                    <img src="" alt="">
+                    <p class="skill-title"></p>
+                    <p class="skill-description">Deserunt cupiditate rem praesentium dicta! Ex, dolorem sunt, veniam corrupti tenetur nisi earum quia ab nobis omnis dicta similique reprehenderit?</p>
+                </div>
+            </div>
+        </section>
 
 
     </main>
