--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button class="btn-secondary">Contact</button>
 
             </div>
-            <img class="hardy-image" src="/images/hardy.png" alt="">
+            <img class="hardy-image" src="images/hardy.png" alt="">
         </div>
     </header>
     <!--  -->
@@ -74,22 +74,22 @@
             <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem20 -->
             <div class="skills-container">
                 <div class="skill">
-                    <img class="skill-img" src="/images/icons/js.png" alt="">
+                    <img class="skill-img" src="images/icons/js.png" alt="">
                     <p class="skill-title">Vanila javascript</p>
                     <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur nulla nostrum dolores laboriosam. Quasi, nesciunt. Libero illum impedit eum doloribus?</p>
                 </div>
                 <div class="skill">
-                    <img class="skill-img" src="/images/icons/react.png" alt="">
+                    <img class="skill-img" src="images/icons/react.png" alt="">
                     <p class="skill-title">React</p>
                     <p class="skill-description">Voluptatibus quia nesciunt tempora autem sit. Ipsa odit nihil quia maiores dignissimos illo deleniti expedita aspernatur omnis velit? Repellendus, tempora!</p>
                 </div>
                 <div class="skill">
-                    <img class="skill-img" src="/images/icons/nodejs.png" alt="">
+                    <img class="skill-img" src="images/icons/nodejs.png" alt="">
                     <p class="skill-title">Node js</p>
                     <p class="skill-description">Debitis corporis non beatae, corrupti soluta facere impedit tenetur. Dicta ducimus unde officiis consequuntur voluptate similique dolorum asperiores perferendis autem!</p>
                 </div>
                 <div class="skill">
-                    <img  class="skill-img" src="/images/icons/mongo.png" alt="">
+                    <img  class="skill-img" src="images/icons/mongo.png" alt="">
                     <p class="skill-title">Mongo DB</p>
                     <p class="skill-description">Deserunt cupiditate rem praesentium dicta! Ex, dolorem sunt, veniam corrupti tenetur nisi earum quia ab nobis omnis dicta similique reprehenderit?</p>
                 </div>
